<resources>
    <string name="app_name">Wild Roga</string>

    <!-- UI Component Strings -->
    <string name="home">Home</string>
    <string name="video">Video</string>
    <string name="favorite">Favorite</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="whatsnew">What\'s New!</string>
    <string name="welcome_user">Hey There %1$s!</string>
    <string name="user_name">%1$s</string>

    <!-- Alerts -->
    <string name="alert_email_sent">Email Sent</string>
    <string name="alert_email_empty">Please enter your email…</string>
    <string name="alert_email_changed">Email Updated</string>
    <string name="alert_reset_password">Reset Password Email Sent</string>
    <string name="alert_user_deleted">Account Deleted</string>

    <!-- Prompts -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="prompt_name">Full Name</string>

    <!-- Actions -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_register_short">Register</string>
    <string name="action_create_account">Create account</string>
    <string name="action_register">Become a member.</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_account_exists">Already have an account?</string>
    <string name="action_send_email">Send Email</string>
    <string name="action_change_email">Update Email</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_save_email">Save Email</string>
    <string name="action_delete">Delete</string>

    <!-- UI Error Messages -->
    <string name="invalid_name">Your name is required</string>
    <string name="invalid_password_length">Password must contain at least 9 characters</string>
    <string name="invalid_password_capital">Password must contain at least 1 capital letter</string>
    <string name="invalid_password_number">Password must contain at least 1 number</string>
    <string name="invalid_password_confirm">Password entries must match</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="existing_email">The email address is already in use</string>
    <string name="incorrect_password">Incorrect password</string>

    <!-- General Text -->
    <string name="text_registration_1">CREATE ACCOUNT</string>
    <string name="text_registration_2">You Belong Here.</string>
    <string name="text_login_1">WELCOME BACK!</string>
    <string name="text_login_2">Please Sign In.</string>
    <string name="text_not_logged_in">You are not logged in</string>

    <!-- Confirmation -->
    <string name="valid_password">Valid</string>
    <string name="valid_confirm_password">Valid</string>

    <!-- Misc -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="message_forgot_password">Enter your email address and we\'ll send you a recovery link.</string>
    <string name="message_change_email">Enter an updated email address.</string>
    <string name="message_reset_password">Enter your email address and a password reset email will be sent to you.</string>
    <string name="message_delete_account">Sorry to see you go! Please enter your login information to delete your account.</string>
    <string name="welcome">"Welcome !"</string>
    <string name="payments_show_name">%s</string>
    <string name="login_failed">Login failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Payment">Payment</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="filter_by_category">Filter by Category:</string>
    
    <string-array name="sorting_choices">
        <item>Title</item>
        <item>Date</item>
        <item>Difficulty</item>
    </string-array>

</resources>
