<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/home_activity"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item

        android:id="@+id/video_activity"
        android:icon="@drawable/ic_video"
        android:title="@string/video"/>
    <item
        android:id="@+id/favorite_activity"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />

    <item
        android:id="@+id/about_activity"
        android:icon="@drawable/ic_about"
        android:title="@string/about"/>

    <item
        android:id="@+id/profile_activity"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

</menu>